# metadata-extraction

./: .env.example  .gitignore  API_USAGE.md  README.md  analytics.py  api_main.py  app.py  cleanup.py  client2.json  debug_db.py  fix_vector_dimensions.py  ingest_common.py  ingest_excel.py  ingest_pdf.py  ingest_structured.py  ingest_text.py  ingest_unified.py  ingest_word.py  pyproject.toml  rbac.py  requirements.txt  retrieval.py  tablesdetection.py  test_agents.py  test_chart_agent.py  test_ingestion.py  test_rbac_agent.py  testdb.py
agents/: __init__.py  analytics_agent.py  base_agent.py  chart_agent.py  ingestion_agent.py  maintenance_agent.py  master_agent.py  query_agent.py  rbac_agent.py
api/: __init__.py  dependencies.py  models.py
api/routers/: ingestion.py  metadata.py  query.py
core/: __init__.py  config.py  database.py  schemas.py
plan.txt/: chart_.txt
utils/: __init__.py  helpers.py  logger.py
